[project]
name = "tlm-generator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "flap1", email = "sho1seto@gmail.com" }
]
dependencies = [
    "toml>=0.10.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
